<woosin> 고객요구사항에따른 기능추가, 로그인 폼생성, 로그인 기능추가, 세션값저장
1. 고객요구사항에따른 이미지 값변경
2. 커뮤니티폼에서 로그인 버튼 생성
3. 로그인 입력정보 데이터베이스 집적입력
4. 어드민 페이지 세션값추가로 외부에서 접근불가
5. 로그인 성공시 관리자페이지로 이동 정보값이 없을시 index로 강제 변경

--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -14,10 +14,15 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
  <style>
-    p,h3,li,a{
+    p,h3,li,a,label{
       font-family: "Nanum Gothic", sans-serif;
       font-size: 23px;
     }
+    p{
+    color: black;
+    font: bold;
+    }
+    
     	::-webkit-scrollbar{width: 16px;}
 		::-webkit-scrollbar-track {background-color:#ABABAB;}
 		::-webkit-scrollbar-thumb {background-color:#191919;border-radius: 10px;}
@@ -68,12 +73,20 @@
 					<div>
 						<div class="box">
 							<div class="image fit">
-								<img src="images/608.jpg" height="380px" alt="" />
+								<img src="images/608.png" height="380px" alt="" />
 							</div>
 							<div class="content">
 								<header class="align-center">
 								<h3> 2020-01-03 카피라이트 변경, 연혁 타임라인 데이터베이스기반 기능 구현, css변경, 서버 카카오맵 키값추가</h3>
 								<h3> 2020-01-04 배경변경 adminIndex추가 연혁/타임라인 리스트 출력 구현, 공장,연혁,민간 추가기능 구현 ,전체적 css 변경</h3>
+								<h3> 2020-01-045 메인 카테고리 추가 후 테이블변경 커뮤니티 기능활성화 어드민 구현확인</h3>
+								<H3>
+								사진 메인베너 동영상 변경시 이미지 파일첨부 후 카톡 kuooe@naver.com</H3>
+								<h3>
+								https://pixabay.com/images/ [사진] <br>
+								https://pixabay.com/videos/search/%EA%B1%B4%EB%AC%BC/ [메인 베너 영상]
+								</H3>
+								
 									<h2>대표 서비스</h2>
 									<p>Main Service</p>
 								</header>
@@ -98,33 +111,33 @@
 					<div id="flexgrid">
 						<div>
 							<header>
-								<h3>업무흐름표</h3>
+								<h3>1:1 문의하기</h3>
 							</header>
-							<p>Business chart</p>
-							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
+							<p>Inquiry</p>
+							<img src="images/1002.png" alt="" style="filter:invert()" width="230px" height="170px" />
 							<ul class="actions">
-								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
+								<li><a href="/Community" class="button alt">Inquiry</a></li>
 							</ul>
 						</div>
 						<div>
 							<header>
-								<h3>등록증</h3>
+								<h3>연혁/타임라인</h3>
 							</header>
-							<p>Registration</p>
-							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<p>Time Line</p>
+							<img src="images/1001.png" alt="" style="filter:invert()"  width="230px" height="170px" />
 							<ul class="actions">
-								<li><a href="/registrationWoosin" class="button alt">Learn More</a></li>
+								<li><a href="/woosinIntroduce4" class="button alt">Time Line</a></li>
 							</ul>
 					
 						</div>
 						<div>
 							<header>
-								<h3>오시는길</h3>
+								<h3>관급/민간 실적</h3>
 							</header>
-							<p>way to come</p>
-							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<p>Performance</p>
+							<img src="images/1003.png" alt="" style="filter:invert()"  width="230px" height="170px" />
 							<ul class="actions">
-								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
+								<li><a href="/coperrationWoosin" class="button alt">Performance</a></li>
 							</ul>
 						</div>
 					</div>
@@ -173,13 +186,41 @@
 			</section>
 
 			<!-- Four -->
-			<section id="four" class="wrapper style3">
+			<section id="two" class="wrapper style3">
 				<div class="inner">
-
-					<header class="align-center">
-						<h2>시공사진리스트</h2>
-						<p>사진</p>
-						</header>
+					<div id="flexgrid">
+						<div>
+							<header>
+								<h3>업무흐름표</h3>
+							</header>
+							<p>Business chart</p>
+							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+						<div>
+							<header>
+								<h3>등록증</h3>
+							</header>
+							<p>Registration</p>
+							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/registrationWoosin" class="button alt">Learn More</a></li>
+							</ul>
+					
+						</div>
+						<div>
+							<header>
+								<h3>오시는길</h3>
+							</header>
+							<p>way to come</p>
+							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							<ul class="actions">
+								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
+							</ul>
+						</div>
+					</div>
 				</div>
 			</section>
 
@@ -191,9 +232,9 @@
 							<div class="content">
 								<h2 class="align-center">문의하기</h2>
 								<hr />
-								<form action="#" method="post">
+								<form action="/addCommunity" method="post">
 									<div class="field half first">
-										<label for="name">Name</label>
+										<label for="name">닉네임</label>
 										<input name="name" id="name" type="text" placeholder="Name">
 									</div>
 									<div class="field half">
@@ -201,23 +242,16 @@
 										<input name="email" id="email" type="email" placeholder="Email">
 									</div>
 									<div class="field">
-										<label for="dept">Department</label>
-										<div class="select-wrapper">
-											<select name="dept" id="dept">
-												<option value="">- Category -</option>
-												<option value="1">Manufacturing</option>
-												<option value="1">Shipping</option>
-												<option value="1">Administration</option>
-												<option value="1">Human Resources</option>
-											</select>
-										</div>
+										<label for="dept">제목</label>
+										<input name="dept" id="dept" type="text" placeholder="Title">
 									</div>
 									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
+										<label for="message">내용</label>
+										<textarea name="message" id="message" rows="6" placeholder="답변은 빠른시일 안에 메일로 송신됩니다."></textarea>
 									</div>
+									
 									<ul class="actions align-center">
-										<li><input value="Send Message" class="button special" type="submit"></li>
+										<li><input value="확인" class="button special" type="submit"></li>
 									</ul>
 								</form>
 							</div>
