--- a/woosin/src/main/resources/templates/woosinCompuny2.html
+++ b/woosin/src/main/resources/templates/woosinCompuny2.html
@@ -111,34 +111,38 @@ button:hover:before,button:hover:after{
 					<div id="flexgrid">
 						<div>
 							<header>
-								<h3>업무흐름표</h3>
+								<h3>1:1 문의하기</h3>
 							</header>
-							<img src="images/203.png" alt="" style="filter:invert()" width="230px" height="180px" />
+							
+							<img src="images/1002.png" alt="" style="filter:invert()" width="230px" height="170px" />
 							<ul class="actions">
-								<li><a href="/woosinIntroduce2" class="button alt">Learn More</a></li>
+								<li><a href="/Community" class="button alt">Inquiry</a></li>
 							</ul>
 						</div>
 						<div>
 							<header>
-								<h3>등록증</h3>
+								<h3>연혁/타임라인</h3>
 							</header>
-							<img src="images/201.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+							
+							<img src="images/1001.png" alt="" style="filter:invert()"  width="230px" height="170px" />
 							<ul class="actions">
-								<li><a href="/registrationWoosin" class="button alt">Learn More</a></li>
+								<li><a href="/woosinIntroduce4" class="button alt">Time Line</a></li>
 							</ul>
+					
 						</div>
 						<div>
 							<header>
-								<h3>오시는길</h3>
+								<h3>관급/민간 실적</h3>
 							</header>
-							<img src="images/204.png" alt="" style="filter:invert()"  width="230px" height="180px" />
+						
+							<img src="images/1003.png" alt="" style="filter:invert()"  width="230px" height="170px" />
 							<ul class="actions">
-								<li><a href="/woosinIntroduce3" class="button alt">Learn More</a></li>
+								<li><a href="/coperrationWoosin" class="button alt">Performance</a></li>
 							</ul>
 						</div>
 					</div>
 				</div>
-			</section>	
+			</section>
 	
 	<!-- One -->
 		<section id="one" class="wrapper style2" style="background-color: #E4E4E4">
