<woosin> 어드민 페이지 사진게시판 폼 구현, 게시글작석, 리스트확인기능구현
1. ftp접속후 사진 서버등록 확인완료
2. db 파일저장값, 게시글정보 입력 확인완료
3. 게시글 생성폼 어드민 인덱스 출력기능 확인 완료
4. 다중파일 업로드 기능 구현 완료
5. 데이터베이스 다중파일 업로드 확인 완료

6. 추후 사진 리스트 select 기능구현 할것

--- a/woosin/src/main/resources/templates/Community.html
+++ b/woosin/src/main/resources/templates/Community.html
@@ -97,7 +97,7 @@ button:hover:before,button:hover:after{
 					<li><a href="coperrationWoosin">주요실적</a></li>
 					<li><a href="elements.html">공사이미지</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="elements.html">커뮤니티</a></li>
+					<li><a href="Community">커뮤니티</a></li>
 				</ul>
 			</nav>
 	<!-- Two -->
@@ -188,7 +188,7 @@ button:hover:before,button:hover:after{
 									</div>
 									
 									<ul class="actions align-center">
-										<li><input value="확인" class="button special" type="submit"></li>
+										<li><input id="add" value="확인" class="button special" type="submit"></li>
 									</ul>
 								</form>
 							</div>
@@ -218,12 +218,17 @@ button:hover:before,button:hover:after{
 			</section>
 						
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/jquery.scrolly.min.js"></script>
+<script src="assets/js/jquery.scrollex.min.js"></script>
+<script src="assets/js/skel.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
+<script>
+$("#add").click(function(){
+	 alert("[문의등록] 빠른 시일내에 메일로 답변이 전송됩니다.");
+	});
+</script>
 	
 	</body>
 </html>
