--- a/woosin/src/main/resources/templates/index.html
+++ b/woosin/src/main/resources/templates/index.html
@@ -251,7 +251,7 @@
 									</div>
 									
 									<ul class="actions align-center">
-										<li><input value="확인" class="button special" type="submit"></li>
+										<li><input value="확인" class="button special" id="add" type="submit"></li>
 									</ul>
 								</form>
 							</div>
@@ -283,7 +283,11 @@
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
-			
+<script>
+$("#add").click(function(){
+	 alert("[문의등록] 빠른 시일내에 메일로 답변이 전송됩니다.");
+	});
+</script>			
 
 	</body>
 </html>
