--- a/woosin/src/main/resources/templates/Community2.html
+++ b/woosin/src/main/resources/templates/Community2.html
@@ -98,7 +98,7 @@ button:hover:before,button:hover:after{
 					<li><a href="coperrationWoosin">주요실적</a></li>
 					<li><a href="elements.html">공사이미지</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
-					<li><a href="elements.html">커뮤니티</a></li>
+					<li><a href="Community">커뮤니티</a></li>
 				</ul>
 			</nav>
 	<!-- Two -->
