<woosin> ftp 서버접속완료, 사진 업로드 기능수행, 사진 리스트 확인 기능수행
1. ftp접속 완료후 카페24에 사진업로드확인
2. 게시글에 따른 사진 등록확인 가능
3. 등록된 사진을 다시 리스트로 출력후 확인기능 구현

--- a/woosin/src/main/resources/templates/adminIndex.html
+++ b/woosin/src/main/resources/templates/adminIndex.html
@@ -297,7 +297,7 @@ width:16px;height:16px;background:##B2EBF4;}
 					    <td th:text="${str5.franchiseeNo}" style="color: black;"></td>
 					    <td th:text="${str5.franchiseeTitle}" style="color: black;"></td>
 					    <td th:text="${str5.franchiseeDate}" style="color: black;"></td>
-					    <td><a href="#" th:href="@{/datileAdmin?(franchiseeNo=${str5.franchiseeNo})}" class="btn btn-primary">정보입력</a></td>
+					    <td><a href="#" th:href="@{/detailAdmin?(franchiseeNo=${str5.franchiseeNo})}" class="btn btn-primary">정보입력</a></td>
 					    <td><a href="#" th:href="@{/deleteCummnity?(franchiseeNo=${str5.franchiseeNo})}" class="btn btn-primary">삭제</a></td>
 					  </tr>
 					  
