--- a/woosin/src/main/resources/templates/woosinIntroduce3.html
+++ b/woosin/src/main/resources/templates/woosinIntroduce3.html
@@ -94,7 +94,7 @@ button:hover:before,button:hover:after{
 					<li><a href="woosinIntroduce">회사소개</a></li>
 					<li><a href="woosinCompuny">주요사업 내용</a></li>
 					<li><a href="coperrationWoosin">주요실적</a></li>
-					<li><a href="elements.html">공사이미지</a></li>
+					<li><a href="imgList">공사이미지</a></li>
 					<li><a href="registrationWoosin">인증/보유</a></li>
 					<li><a href="Community">커뮤니티</a></li>
 				</ul>
@@ -167,15 +167,15 @@ button:hover:before,button:hover:after{
 					<div class="row">
 						
 				
-					</div>
+			</div>
 				</div>
 				<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a343f0d2fda2b44b118d8300b55887de"></script>
 				<div id="map" style="width:100%;height:600px;"></div>
 				<p style="color: black;"><i class="fa fa-map-marker"></i>  주소 : 인천광역시 계양구 계양대로 138 4층(작전동)</p>
-				<p style="color: black;"><i class="fa fa-envelope-o"></i>  (주)우신종합건설 : kuooe@naver.com </p>
+				<p style="color: black;"><i class="fa fa-envelope-o"></i>  (주)우신종합건설 : woosin1009@hanmail.net </p>
 				<p style="color: black;"><i class="fa fa-phone"></i>  Tel : 032) 549-2207/2208 | Fax : 032) 549-2209 </p>
 				<p style="color: black;"><i class="fa fa-internet-explorer"></i>  http://www.우신종합건설.com </p>
-				
+
 		</div>
 	</div>
 </section>
